k8s/applications/pulse-ubc-ocpi-adaptor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pulse-ubc-ocpi-adaptor-wl
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pulse-ubc-ocpi-adaptor-wl
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pulse-ubc-ocpi-adaptor-wl
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: pulse-ubc-ocpi-adaptor-container
        image: asia-south1-docker.pkg.dev/pulse-energy/pulse-ubc-ocpi-adaptor/pulse-ubc-ocpi-adaptor:0e4628b
        ports:
          - containerPort: 6001
        resources:
          limits:
            memory: "500Mi"
            cpu: "128m"
            ephemeral-storage: "2Gi"
          requests:
            memory: "300Mi"
            cpu: "64m"
            ephemeral-storage: "1Gi"
        lifecycle:
          preStop:
            exec:
              command: [ "/bin/sleep", "60" ]
---
kind: Service
apiVersion: v1
metadata:
  name: pulse-ubc-ocpi-adaptor-service
  labels:
    app.kubernetes.io/name: pulse-ubc-ocpi-adaptor-service
spec:
  selector:
    app.kubernetes.io/name: pulse-ubc-ocpi-adaptor-wl
  ports:
  - port: 6001
    targetPort: 6001
    name: http
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: pulse-ubc-ocpi-adaptor-ingress
  annotations:
    env: prod
  labels:
    app.kubernetes.io/name: pulse-ubc-ocpi-adaptor-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: pulse-ubc-ocpi-adaptor.pulseenergy.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: pulse-ubc-ocpi-adaptor-service
              port:
                number: 6001
  tls:
    - hosts:
      - pulse-ubc-ocpi-adaptor.pulseenergy.io
      secretName: pulse-energy-full-sectigo-cert1-2025
